--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,6 +24,7 @@ android:id="@+id/content"
             android:id="@+id/url_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="www.google.com"
             android:hint="Enter Url" />
     </android.support.design.widget.TextInputLayout>
 
